<resources>
    <string name="app_name">SivMeimei_Homework</string>
    <string name="logo">logo</string>
    <string name="password_input">Password</string>

    <string name="title">App Content</string>
    <string name="email_or_username_input">Email or Username</string>
    <string name="login">Login</string>
    <string name="login_subtitle">Welcome Back!</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="or_login_with">Or login with</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>

    <string name="register_subtitle">Create Account</string>
    <string name="email_input">Email</string>
    <string name="username_input">Username</string>
    <string name="confirm_password_input">Confirm Password</string>
    <string name="register">Register</string>
    <string name="or_register_with">Or register with</string>
    <string name="already_have_account">Already have an account? Login</string>
</resources>