<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/main"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/background"
   tools:context=".RegisterActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="25dp"
        >
            <!-- Logo -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/logo"
                android:contentDescription="logo"
                android:background="@drawable/logo_round"
                android:clipToOutline="true"

                app:layout_constraintTop_toTopOf="@id/main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />

            <!--  Title  -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="25sp"
                android:layout_marginVertical="15dp"
                android:textColor="@color/white"

                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />

            <!--  Subtitle  -->
            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_subtitle"
                android:textSize="30sp"
                android:layout_marginVertical="20dp"
                android:textColor="@color/white"

                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_input"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/mail"
                app:startIconTint="@color/primary"
                android:textColorHint="@color/white"

                app:layout_constraintTop_toBottomOf="@id/subtitle"
            >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etUsernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_input"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/username_24"
                app:startIconTint="@color/primary"
                android:textColorHint="@color/white"

                app:layout_constraintTop_toBottomOf="@id/etEmailLayout"
            >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/password_24"
                app:endIconMode="password_toggle"
                app:startIconTint="@color/primary"
                android:textColorHint="@color/white"

                app:layout_constraintTop_toBottomOf="@id/etUsernameLayout"
            >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etConfirmPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_input"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/vpn_key"
                app:endIconMode="password_toggle"
                app:startIconTint="@color/primary"
                android:textColorHint="@color/white"
                app:errorEnabled="true"

                app:layout_constraintTop_toBottomOf="@id/etPasswordLayout"
            >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Register btn -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="16sp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_state_toggle"
                app:backgroundTint="@null"
                android:enabled="false"

                app:layout_constraintTop_toBottomOf="@id/etConfirmPasswordLayout"
            />

            <!-- Or register with -->
            <LinearLayout
                android:id="@+id/orRegisterWithContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="20dp"

                app:layout_constraintTop_toBottomOf="@id/btnRegister"
            >
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                />

                <TextView
                    android:id="@+id/tvOrLoginWith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_register_with"
                    android:textSize="16sp"
                    android:paddingHorizontal="15dp"
                    android:textColor="@color/white"
                />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                />
            </LinearLayout>

            <!-- Other register options -->
            <LinearLayout
                android:id="@+id/otherOptionsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"

                app:layout_constraintTop_toBottomOf="@id/orRegisterWithContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            >
                <!-- Google -->
                <ImageView
                    android:id="@+id/btnGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/google"
                    android:background="@drawable/rounded_border"
                    app:backgroundTint="@null"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"
                />

                <!-- Facebook -->
                <ImageView
                    android:id="@+id/btnFacebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/facebook"
                    android:background="@drawable/rounded_border"
                    app:backgroundTint="@null"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"
                />

                <!-- Github -->
                <ImageView
                    android:id="@+id/btnGithub"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/github_white"
                    android:background="@drawable/rounded_border"
                    app:backgroundTint="@null"
                    android:padding="10dp"
                    android:layout_marginHorizontal="10dp"
                />
            </LinearLayout>

            <!-- Login -->
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginVertical="5dp"
                android:background="@android:color/transparent"

                app:layout_constraintTop_toBottomOf="@id/otherOptionsContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>